# rail_setup

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  install_rail.py  pyproject.toml
.github/workflows/: main.yml
Docker/: Dockerfile
conda-lock/: conda-linux-64.lock.yml  conda-osx-arm64.lock.yml
